--- a/views/layout/boilerplate.ejs
+++ b/views/layout/boilerplate.ejs
@@ -9,7 +9,7 @@
     <link href="/css/rating.css" rel="stylesheet">
     <link href="https://api.mapbox.com/mapbox-gl-js/v3.9.1/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v3.9.1/mapbox-gl.js"></script>
-    <!-- <title>WounderLust</title> -->
+    <title>WounderLust</title>
 </head>
 <body>
     <%- include("../includes/navbar.ejs") %>
