--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -13,7 +13,7 @@
                  </a>
          
         <!-- {/* Google */} -->
-        <a class="btn btn-outline-dark btn-floating m-1"  href="mailto:harsh4jaiswal@gmail.com?subject=Inquiry%20from%20NoteSolver%20Visitor" role="button" target='blank'>
+        <a class="btn btn-outline-dark btn-floating m-1"  href="mailto:harsh4jaiswal@gmail.com?subject=From%20WonderLust%20Visitor" role="button" target='blank'>
             <i class="fab fa-google"></i>
           </a>
 
